--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <div id='FirstDiv'>
 <link rel="stylesheet" href="CSS.css">
-<link rel="script" src="JS.js">
+<script src="JS.js"></script>
   <div class='BackgroundImage1'></div>
 
   <div class="Title">
