--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <link rel="stylesheet" href="CSS.css">
-<script src="JS.js"></script>
 <div id='FirstDiv'>
   <div class='BackgroundImage1'></div>
 
@@ -55,5 +54,21 @@
       </li>
     </ul>
   </div>
+<script src="JS.js"></script>
+<script 
+  $('#ToBlue').click(function() {
+  $('#Paragraph').css('color', 'blue');
+});
+$('#ToRed').click(function() {
+  $("#Paragraph").css('color', 'red')
+});
+$('#ToGreen').click(function() {
+  $("#Paragraph").css('color', 'green')
+});
+$('#ToDefault').click(function() {
+  $("#Paragraph").css('color', 'white')
+});
+
+</script>
 
 </div>
